--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 	"dependencies": {
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
-		"react-hot-loader": "^4.1.2"
+		"react-hot-loader": "^4.1.2",
+		"react-redux": "^5.0.7",
+		"redux": "^4.0.0"
 	}
 }
