--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
 		"webpack-dev-server": "^3.1.3"
 	},
 	"dependencies": {
+		"cross-fetch": "^2.2.0",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
 		"react-hot-loader": "^4.1.2",
 		"react-redux": "^5.0.7",
-		"redux": "^4.0.0"
+		"redux": "^4.0.0",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0"
 	}
 }
